--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -3,25 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meble Protetyczne - Nazwa Firmy</title>
+    <title>Meble Protetyczne - R.S. Labor meble</title>
     <link rel="stylesheet" href="styles4.css">
 </head>
 <body>
     <header>
         <div class="logo-container">
             <img src="logo.png" alt="Logo Firmy" class="logo">
-            <h1>Nazwa Firmy</h1>
+            <h1>R.S. Labor meble</h1>
         </div>
         <nav>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">O nas</a></li>
-                <li><a href="services.html">Usługi</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="gallery.html">Galeria</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
-                <li><a href="prosthetics-furniture.html">Meble Protetyczne</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
             </ul>
         </nav>
     </header>
@@ -160,7 +155,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Nazwa Firmy. Wszelkie prawa zastrzeżone.</p>
+        <p>&copy; 2024 R.S. Labor meble. Wszelkie prawa zastrzeżone.</p>
     </footer>
     <script src="script2.js"></script>
 </body>
