--- a/komis.html
+++ b/komis.html
@@ -16,7 +16,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
-                <li><a href="gallery.html">Galeria</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
             </ul>
         </nav>
     </header>
