--- a/kontakt.html
+++ b/kontakt.html
@@ -3,25 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontakt - Nazwa Firmy</title>
+    <title>Kontakt - R.S. Labor meble</title>
     <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
     <header>
         <div class="logo-container">
             <img src="logo.png" alt="Logo Firmy" class="logo">
-            <h1>Nazwa Firmy</h1>
+            <h1>R.S. Labor meble</h1>
         </div>
         <nav>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">O nas</a></li>
-                <li><a href="services.html">Usługi</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="gallery.html">Galeria</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
-                <li><a href="prosthetics-furniture.html">Meble Protetyczne</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
+                <li><a href="galeria.html">Galeria</a></li>  
             </ul>
         </nav>
     </header>
@@ -40,7 +35,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Nazwa Firmy. Wszelkie prawa zastrzeżone.</p>
+        <p>&copy; 2024 R.S. Labor meble. Wszelkie prawa zastrzeżone.</p>
     </footer>
 </body>
 </html>
