--- a/galeria.html
+++ b/galeria.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria - Nazwa Firmy</title>
+    <title>Galeria - R.S. Labor meble</title>
     <link rel="stylesheet" href="styles3.css">
 </head>
 <body>
     <header>
         <div class="logo-container">
             <img src="logo.png" alt="Logo Firmy" class="logo">
-            <h1>Nazwa Firmy</h1>
+            <h1>R.S. Labor meble</h1>
         </div>
         <nav>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="o_nas.html">O nas</a></li>
-                <li><a href="galeria.html">Usługi</a></li>
+                <li><a href="o_nas.html">Kontakt</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
             </ul>
         </nav>
     </header>
@@ -36,7 +36,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 R.S.Labor meble Wszelkie prawa zastrzeżone.</p>
+        <p>&copy; 2024 R.S.Labor meble. Wszelkie prawa zastrzeżone.</p>
     </footer>
 </body>
 </html>
