--- a/galeria.html
+++ b/galeria.html
@@ -15,7 +15,7 @@
         <nav>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="o_nas.html">Kontakt</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
                 <li><a href="galeria.html">Galeria</a></li>
             </ul>
         </nav>
