--- a/meble_stomatologiczne.html
+++ b/meble_stomatologiczne.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo-container">
             <img src="logo.png" alt="Logo Firmy" class="logo">
-            <h1>R.S. Labor meble/h1>
+            <h1>R.S. Labor meble</h1>
         </div>
         <nav>
             <ul class="nav-links">
