--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -25,18 +25,18 @@
             <h2>Nasza Oferta Mebli Protetycznych</h2>
             <div class="furniture-grid">
                 <div class="furniture-item">
-                    <img src="photo1.jpg" alt="Mebel 1" class="furniture-img" onclick="openModal('modal1')">
-                    <h3>Mebel Protetyczny 1</h3>
-                    <p><strong>Opis:</strong> Wysokiej jakości mebel protetyczny, idealny do zastosowań specjalistycznych.</p>
-                    <p><strong>Cena netto:</strong> 2000 PLN</p>
-                    <p><strong>Wielkość:</strong> 120x60x75 cm</p>
+                    <img src="protetyczne1.jpg" alt="Mebel 1" class="furniture-img" onclick="openModal('modal1')">
+                    <h3>Biurko ENS-pro jednostanowiskowe</h3>
+                    <p><strong>Opis:</strong> Wyposażenie obejmuje instalację elektryczną z trzema gniazdami pod blatem oraz instalację powietrzną z dmuchawką. Zestaw zawiera także matę roboczą oraz prowadnice szuflad z funkcją cichego dotyku, a całość jest wykonana z konstrukcji aluminiowej. Opcje dodatkowe to możliwość instalacji gazowej, dodanie kobyłki (dwukrotnie), lampy oraz wyciągu pyłu. Istnieje również opcja zmiany koloru.</p>
+                    <p><strong>Cena netto:</strong> 4400 PLN</p>
+                    <p><strong>Wielkość:</strong> 150x60x89 cm</p>
                 </div>
                 <div id="modal1" class="modal">
                     <span class="close" onclick="closeModal('modal1')">&times;</span>
                     <div class="modal-content">
-                        <img src="photo1" alt="Mebel 1 - Zdjęcie 1">
-                        <img src="photo1.jpg" alt="Mebel 1 - Zdjęcie 2">
-                        <img src="photo1.jpg" alt="Mebel 1 - Zdjęcie 3">
+                        <img src="protetyczne2.jpg" alt="Mebel 1 - Zdjęcie 1">
+                        <img src="protetyczne2_1.jpg" alt="Mebel 1 - Zdjęcie 2">
+                        <img src="protetyczne2_2.jpg" alt="Mebel 1 - Zdjęcie 3">
                     </div>
                 </div>
 
