--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -3,20 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meble Protetyczne - R.S. Labor meble</title>
+    <title>Meble Protetyczne - Nazwa Firmy</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="logo-container">
             <img src="logo.png" alt="Logo Firmy" class="logo">
-            <h1>R.S. Labor meble</h1>
+            <h1>Nazwa Firmy</h1>
         </div>
         <nav>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="kontakt.html">Kontakt</a></li>
-                <li><a href="galeria.html">Galeria</a></li>
+                <li><a href="about.html">O nas</a></li>
+                <li><a href="services.html">Usługi</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="gallery.html">Galeria</a></li>
+                <li><a href="contact.html">Kontakt</a></li>
+                <li><a href="prosthetics-furniture.html">Meble Protetyczne</a></li>
             </ul>
         </nav>
     </header>
@@ -24,132 +29,147 @@
         <section class="furniture">
             <h2>Nasza Oferta Mebli Protetycznych</h2>
             <div class="furniture-grid">
-                <!-- Product Item 1 -->
+                <!-- Mebel 1 -->
                 <div class="furniture-item">
-                    <img src="protetyczne1.jpg" alt="Mebel 1" class="furniture-img" onclick="openModal('modal1')">
-                    <h3>Biurko ENS-pro jednostanowiskowe</h3>
-                    <div class="furniture-details">
-                        <div class="furniture-description">
-                            <p><strong>Opis:</strong></p>
-                            <p>Wyposażenie obejmuje instalację elektryczną z trzema gniazdami pod blatem oraz instalację powietrzną z dmuchawką.</p>
-                            <p><span class="bold-label">Zestaw zawiera także:</span></p>
-                            <ul>
-                                <li>Matę roboczą</li>
-                                <li>Prowadnice szuflad z funkcją cichego dotyku</li>
-                                <li>Konstrukcję aluminiową</li>
-                            </ul>
-                            <p><span class="bold-label">Opcje dodatkowe:</span></p>
-                            <ul>
-                                <li>Instalacja gazowa</li>
-                                <li>Dodanie kobyłki (dwukrotnie)</li>
-                                <li>Lampa</li>
-                                <li>Wyciąg pyłu</li>
-                            </ul>
-                            <p><span class="bold-label">Istnieje również opcja zmiany koloru.</span></p>
-                        </div>
-                        <div class="furniture-specs">
-                            <p><strong>Cena netto:</strong> 4400 PLN</p>
-                            <p><strong>Wielkość:</strong> 150x60x89 cm</p>
-                        </div>
-                    </div>
+                    <img src="photo1.jpg" alt="Mebel 1" class="furniture-img" onclick="openModal('modal1')">
+                    <h3>Mebel Protetyczny 1</h3>
+                    <p><strong>Opis:</strong> Wysokiej jakości mebel protetyczny, idealny do zastosowań specjalistycznych.</p>
+                    <p><strong>Cena netto:</strong> 2000 PLN</p>
+                    <p><strong>Wielkość:</strong> 120x60x75 cm</p>
                 </div>
-                <!-- Modal for Product 1 -->
                 <div id="modal1" class="modal">
                     <span class="close" onclick="closeModal('modal1')">&times;</span>
                     <div class="modal-content">
-                        <img src="protetyczne2.jpg" alt="Mebel 1 - Zdjęcie 1">
-                        <img src="protetyczne2_1.jpg" alt="Mebel 1 - Zdjęcie 2">
-                        <img src="protetyczne2_2.jpg" alt="Mebel 1 - Zdjęcie 3">
-                    </div>
-                </div>
-                 <div class="furniture-item">
-                    <img src="furniture9.jpg" alt="Mebel 9" class="furniture-img" onclick="openModal('modal9')">
-                    <h3>Mebel Protetyczny 9</h3>
-                    <p><strong>Opis:</strong> Nowoczesny mebel protetyczny o eleganckim wykończeniu, idealny do każdego biura.</p>
-                    <p><strong>Cena netto:</strong> 2000 PLN</p>
-                    <p><strong>Wielkość:</strong> 120x60x80 cm</p>
-                </div>
-                <div id="modal9" class="modal">
-                    <span class="close" onclick="closeModal('modal9')">&times;</span>
-                    <div class="modal-content">
-                        <img src="furniture9-large1.jpg" alt="Mebel 9 - Zdjęcie 1">
-                        <img src="furniture9-large2.jpg" alt="Mebel 9 - Zdjęcie 2">
-                        <img src="furniture9-large3.jpg" alt="Mebel 9 - Zdjęcie 3">
+                        <img src="photo1-large1.jpg" alt="Mebel 1 - Zdjęcie 1">
+                        <img src="photo1-large2.jpg" alt="Mebel 1 - Zdjęcie 2">
+                        <img src="photo1-large3.jpg" alt="Mebel 1 - Zdjęcie 3">
                     </div>
                 </div>
 
+                <!-- Mebel 2 -->
                 <div class="furniture-item">
-                    <img src="furniture10.jpg" alt="Mebel 10" class="furniture-img" onclick="openModal('modal10')">
-                    <h3>Mebel Protetyczny 10</h3>
-                    <p><strong>Opis:</strong> Funkcjonalny mebel protetyczny z możliwością rozbudowy i personalizacji.</p>
-                    <p><strong>Cena netto:</strong> 2300 PLN</p>
+                    <img src="photo2.jpg" alt="Mebel 2" class="furniture-img" onclick="openModal('modal2')">
+                    <h3>Mebel Protetyczny 2</h3>
+                    <p><strong>Opis:</strong> Nowoczesny mebel protetyczny, który łączy funkcjonalność z estetyką.</p>
+                    <p><strong>Cena netto:</strong> 1500 PLN</p>
+                    <p><strong>Wielkość:</strong> 100x50x70 cm</p>
+                </div>
+                <div id="modal2" class="modal">
+                    <span class="close" onclick="closeModal('modal2')">&times;</span>
+                    <div class="modal-content">
+                        <img src="photo2-large1.jpg" alt="Mebel 2 - Zdjęcie 1">
+                        <img src="photo2-large2.jpg" alt="Mebel 2 - Zdjęcie 2">
+                        <img src="photo2-large3.jpg" alt="Mebel 2 - Zdjęcie 3">
+                    </div>
+                </div>
+
+                <!-- Mebel 3 -->
+                <div class="furniture-item">
+                    <img src="photo3.jpg" alt="Mebel 3" class="furniture-img" onclick="openModal('modal3')">
+                    <h3>Mebel Protetyczny 3</h3>
+                    <p><strong>Opis:</strong> Ergonomiczny mebel protetyczny zaprojektowany z myślą o komforcie.</p>
+                    <p><strong>Cena netto:</strong> 2500 PLN</p>
+                    <p><strong>Wielkość:</strong> 130x65x80 cm</p>
+                </div>
+                <div id="modal3" class="modal">
+                    <span class="close" onclick="closeModal('modal3')">&times;</span>
+                    <div class="modal-content">
+                        <img src="photo3-large1.jpg" alt="Mebel 3 - Zdjęcie 1">
+                        <img src="photo3-large2.jpg" alt="Mebel 3 - Zdjęcie 2">
+                        <img src="photo3-large3.jpg" alt="Mebel 3 - Zdjęcie 3">
+                    </div>
+                </div>
+
+                <!-- Mebel 4 -->
+                <div class="furniture-item">
+                    <img src="photo4.jpg" alt="Mebel 4" class="furniture-img" onclick="openModal('modal4')">
+                    <h3>Mebel Protetyczny 4</h3>
+                    <p><strong>Opis:</strong> Wytrzymały mebel protetyczny stworzony z wysokiej jakości materiałów.</p>
+                    <p><strong>Cena netto:</strong> 1800 PLN</p>
+                    <p><strong>Wielkość:</strong> 110x55x75 cm</p>
+                </div>
+                <div id="modal4" class="modal">
+                    <span class="close" onclick="closeModal('modal4')">&times;</span>
+                    <div class="modal-content">
+                        <img src="photo4-large1.jpg" alt="Mebel 4 - Zdjęcie 1">
+                        <img src="photo4-large2.jpg" alt="Mebel 4 - Zdjęcie 2">
+                        <img src="photo4-large3.jpg" alt="Mebel 4 - Zdjęcie 3">
+                    </div>
+                </div>
+
+                <!-- Mebel 5 -->
+                <div class="furniture-item">
+                    <img src="photo5.jpg" alt="Mebel 5" class="furniture-img" onclick="openModal('modal5')">
+                    <h3>Mebel Protetyczny 5</h3>
+                    <p><strong>Opis:</strong> Innowacyjny mebel protetyczny, zapewniający komfort i funkcjonalność.</p>
+                    <p><strong>Cena netto:</strong> 2200 PLN</p>
+                    <p><strong>Wielkość:</strong> 125x60x80 cm</p>
+                </div>
+                <div id="modal5" class="modal">
+                    <span class="close" onclick="closeModal('modal5')">&times;</span>
+                    <div class="modal-content">
+                        <img src="photo5-large1.jpg" alt="Mebel 5 - Zdjęcie 1">
+                        <img src="photo5-large2.jpg" alt="Mebel 5 - Zdjęcie 2">
+                        <img src="photo5-large3.jpg" alt="Mebel 5 - Zdjęcie 3">
+                    </div>
+                </div>
+
+                <!-- Mebel 6 -->
+                <div class="furniture-item">
+                    <img src="photo6.jpg" alt="Mebel 6" class="furniture-img" onclick="openModal('modal6')">
+                    <h3>Mebel Protetyczny 6</h3>
+                    <p><strong>Opis:</strong> Stylowy mebel protetyczny z nowoczesnym designem.</p>
+                    <p><strong>Cena netto:</strong> 2400 PLN</p>
                     <p><strong>Wielkość:</strong> 140x70x85 cm</p>
                 </div>
-                <div id="modal10" class="modal">
-                    <span class="close" onclick="closeModal('modal10')">&times;</span>
+                <div id="modal6" class="modal">
+                    <span class="close" onclick="closeModal('modal6')">&times;</span>
                     <div class="modal-content">
-                        <img src="furniture10-large1.jpg" alt="Mebel 10 - Zdjęcie 1">
-                        <img src="furniture10-large2.jpg" alt="Mebel 10 - Zdjęcie 2">
-                        <img src="furniture10-large3.jpg" alt="Mebel 10 - Zdjęcie 3">
+                        <img src="photo6-large1.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="photo6-large2.jpg" alt="Mebel 6 - Zdjęcie 2">
+                        <img src="photo6-large3.jpg" alt="Mebel 6 - Zdjęcie 3">
                     </div>
                 </div>
 
+                <!-- Mebel 7 -->
                 <div class="furniture-item">
-                    <img src="furniture11.jpg" alt="Mebel 11" class="furniture-img" onclick="openModal('modal11')">
-                    <h3>Mebel Protetyczny 11</h3>
-                    <p><strong>Opis:</strong> Ergonomiczny mebel z innowacyjnymi funkcjami i nowoczesnym designem.</p>
-                    <p><strong>Cena netto:</strong> 2700 PLN</p>
+                    <img src="photo7.jpg" alt="Mebel 7" class="furniture-img" onclick="openModal('modal7')">
+                    <h3>Mebel Protetyczny 7</h3>
+                    <p><strong>Opis:</strong> Ekskluzywny mebel protetyczny z eleganckimi wykończeniami.</p>
+                    <p><strong>Cena netto:</strong> 2600 PLN</p>
                     <p><strong>Wielkość:</strong> 150x75x90 cm</p>
                 </div>
-                <div id="modal11" class="modal">
-                    <span class="close" onclick="closeModal('modal11')">&times;</span>
+                <div id="modal7" class="modal">
+                    <span class="close" onclick="closeModal('modal7')">&times;</span>
                     <div class="modal-content">
-                        <img src="furniture11-large1.jpg" alt="Mebel 11 - Zdjęcie 1">
-                        <img src="furniture11-large2.jpg" alt="Mebel 11 - Zdjęcie 2">
-                        <img src="furniture11-large3.jpg" alt="Mebel 11 - Zdjęcie 3">
+                        <img src="photo7-large1.jpg" alt="Mebel 7 - Zdjęcie 1">
+                        <img src="photo7-large2.jpg" alt="Mebel 7 - Zdjęcie 2">
+                        <img src="photo7-large3.jpg" alt="Mebel 7 - Zdjęcie 3">
                     </div>
                 </div>
 
+                <!-- Mebel 8 -->
                 <div class="furniture-item">
-                    <img src="furniture12.jpg" alt="Mebel 12" class="furniture-img" onclick="openModal('modal12')">
-                    <h3>Mebel Protetyczny 12</h3>
-                    <p><strong>Opis:</strong> Ekskluzywny mebel z zaawansowanymi opcjami regulacji i wysokiej jakości materiałami.</p>
-                    <p><strong>Cena netto:</strong> 3000 PLN</p>
-                    <p><strong>Wielkość:</strong> 160x80x90 cm</p>
+                    <img src="photo8.jpg" alt="Mebel 8" class="furniture-img" onclick="openModal('modal8')">
+                    <h3>Mebel Protetyczny 8</h3>
+                    <p><strong>Opis:</strong> Funkcjonalny mebel protetyczny z zaawansowanymi opcjami regulacji.</p>
+                    <p><strong>Cena netto:</strong> 2300 PLN</p>
+                    <p><strong>Wielkość:</strong> 135x65x80 cm</p>
                 </div>
-                <div id="modal12" class="modal">
-                    <span class="close" onclick="closeModal('modal12')">&times;</span>
+                <div id="modal8" class="modal">
+                    <span class="close" onclick="closeModal('modal8')">&times;</span>
                     <div class="modal-content">
-                        <img src="furniture12-large1.jpg" alt="Mebel 12 - Zdjęcie 1">
-                        <img src="furniture12-large2.jpg" alt="Mebel 12 - Zdjęcie 2">
-                        <img src="furniture12-large3.jpg" alt="Mebel 12 - Zdjęcie 3">
+                        <img src="photo8-large1.jpg" alt="Mebel 8 - Zdjęcie 1">
+                        <img src="photo8-large2.jpg" alt="Mebel 8 - Zdjęcie 2">
+                        <img src="photo8-large3.jpg" alt="Mebel 8 - Zdjęcie 3">
                     </div>
                 </div>
-
-                <div class="furniture-item">
-                    <img src="furniture13.jpg" alt="Mebel 13" class="furniture-img" onclick="openModal('modal13')">
-                    <h3>Mebel Protetyczny 13</h3>
-                    <p><strong>Opis:</strong> Stylowy mebel protetyczny z nowoczesnym wzornictwem i wygodą użytkowania.</p>
-                    <p><strong>Cena netto:</strong> 2800 PLN</p>
-                    <p><strong>Wielkość:</strong> 150x70x85 cm</p>
-                </div>
-                <div id="modal13" class="modal">
-                    <span class="close" onclick="closeModal('modal13')">&times;</span>
-                    <div class="modal-content">
-                        <img src="furniture13-large1.jpg" alt="Mebel 13 - Zdjęcie 1">
-                        <img src="furniture13-large2.jpg" alt="Mebel 13 - Zdjęcie 2">
-                        <img src="furniture13-large3.jpg" alt="Mebel 13 - Zdjęcie 3">
-                    </div>
-                </div>
-
-                <!-- Repeat similar block for other furniture items -->
-
             </div>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 R.S. Labor meble. Wszelkie prawa zastrzeżone.</p>
+        <p>&copy; 2024 Nazwa Firmy. Wszelkie prawa zastrzeżone.</p>
     </footer>
-    <script src="script2.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
