--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -26,28 +26,28 @@
             <div class="furniture-grid">
                 <!-- Mebel 1 -->
                 <div class="furniture-item">
-                    <img src="photo1.jpg" alt="Mebel 1" class="furniture-img" onclick="openModal('modal1')">
-                    <h3>Mebel Protetyczny 1</h3>
-                    <p><strong>Opis:</strong> Wysokiej jakości mebel protetyczny, idealny do zastosowań specjalistycznych.</p>
-                    <p><strong>Cena netto:</strong> 2000 PLN</p>
-                    <p><strong>Wielkość:</strong> 120x60x75 cm</p>
+                    <img src="protetyczne1.jpg" alt="Mebel 1" class="furniture-img" onclick="openModal('modal1')">
+                    <h3>Biurko ENS-pro jednostanowiskowe</h3>
+                    <p><strong>Opis:</strong>Wyposażenie obejmuje instalację elektryczną z trzema gniazdami pod blatem oraz instalację powietrzną z dmuchawką. Zestaw zawiera także matę roboczą oraz prowadnice szuflad z funkcją cichego dotyku, a całość jest wykonana z konstrukcji aluminiowej. Opcje dodatkowe to możliwość instalacji gazowej, dodanie kobyłki (dwukrotnie), lampy oraz wyciągu pyłu. Istnieje również opcja zmiany koloru.</p>
+                    <p><strong>Cena netto:</strong> 4400 PLN</p>
+                    <p><strong>Wielkość:</strong> 150x60x89 cm</p>
                 </div>
                 <div id="modal1" class="modal">
                     <span class="close" onclick="closeModal('modal1')">&times;</span>
                     <div class="modal-content">
-                        <img src="photo1-large1.jpg" alt="Mebel 1 - Zdjęcie 1">
-                        <img src="photo1-large2.jpg" alt="Mebel 1 - Zdjęcie 2">
-                        <img src="photo1-large3.jpg" alt="Mebel 1 - Zdjęcie 3">
+                        <img src="protetyczne1_1.jpg" alt="Mebel 1 - Zdjęcie 1">
+                        <img src="protetyczne1_2.jpg" alt="Mebel 1 - Zdjęcie 2">
+                        <img src="protetyczne1_3.jpg" alt="Mebel 1 - Zdjęcie 3">
                     </div>
                 </div>
 
                 <!-- Mebel 2 -->
                 <div class="furniture-item">
-                    <img src="photo2.jpg" alt="Mebel 2" class="furniture-img" onclick="openModal('modal2')">
-                    <h3>Mebel Protetyczny 2</h3>
-                    <p><strong>Opis:</strong> Nowoczesny mebel protetyczny, który łączy funkcjonalność z estetyką.</p>
-                    <p><strong>Cena netto:</strong> 1500 PLN</p>
-                    <p><strong>Wielkość:</strong> 100x50x70 cm</p>
+                    <img src="protetyczne2.jpg" alt="Mebel 2" class="furniture-img" onclick="openModal('modal2')">
+                    <h3>Biurko Protetyczne Kavo</h3>
+                    <p><strong>Opis:</strong> Dwustanowiskowe biurko protetyczne Kavo. Istnieje możliwość zamontowania kompletnego wyciągu Kavo, podłokietników, lampy oraz innych elementów według uznania klienta. Więcej informacji można uzyskać pod numerem telefonu.</p>
+                    <p><strong>Cena netto:</strong> 4900 PLN</p>
+                    <p><strong>Wielkość:</strong> Brak opisu </p>
                 </div>
                 <div id="modal2" class="modal">
                     <span class="close" onclick="closeModal('modal2')">&times;</span>
